--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
   "name": "workedCityMap",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.9.0",
+    "@material-ui/styles": "^4.9.6",
     "axios": "^0.19.2",
     "history": "^4.10.1",
     "leaflet": "^1.6.0",
-    "react": "^16.12.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
+    "mobx-react-devtools": "^6.1.1",
+    "react": "^16.13.1",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^16.12.0",
-    "react-leaflet": "^2.6.1",
+    "react-dom": "^16.13.1",
+    "react-leaflet": "^2.6.3",
     "react-leaflet-zoom-indicator": "^0.1.2",
-    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^3.4.1",
     "react-tap-event-plugin": "^3.0.3",
     "react-toastify": "^5.5.0",
-    "react-transition-group": "^1.2.1",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
