--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workedCityMap",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "google-maps-react": "^2.0.6",
     "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
@@ -39,7 +40,6 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
-    "leaflet": "^1.6.0",
     "mini-css-extract-plugin": "0.9.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
@@ -57,8 +57,6 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
-    "react-leaflet": "^2.6.3",
-    "react-leaflet-zoom-indicator": "^0.1.2",
     "react-router-dom": "^5.1.2",
     "react-tap-event-plugin": "^3.0.3",
     "react-toastify": "^5.5.0",
