--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "material-auto-rotating-carousel": "^3.0.2",
+    "material-ui-dropzone": "^3.0.0",
     "mini-css-extract-plugin": "0.9.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
@@ -53,11 +55,13 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-awesome-slider": "^4.1.0",
     "react-body-classname": "^1.3.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
     "react-router-dom": "^5.1.2",
+    "react-swipeable-views": "^0.13.9",
     "react-tap-event-plugin": "^3.0.3",
     "react-toastify": "^5.5.0",
     "react-transition-group": "^1.2.1",
@@ -70,7 +74,7 @@
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
-    "webpack-dev-server": "3.10.3",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
   },
